--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <option>RWA Rialo</option>
       <option>Rialo Isn't Layer One</option>
       <option>This Is Just Beginning</option>
-      <<option>Rialo Role System</option>
+      <option>Rialo Role System</option>
     </select>
 
     <input type="text" id="xInput" placeholder="@nickname X">
