--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
   <div class="controls">
     <select id="materiSelect">
-      <option>Tutorial</option>
-      <option>What is Rialo?</option>
+      <option>How To Use RialOshare Generator</option>
+      <option>What Is Rialo?</option>
       <option>RWA Rialo</option>
       <option>Rialo Isn't Layer One</option>
       <option>This Is Just Beginning</option>
