--- a/index.html
+++ b/index.html
@@ -81,7 +81,15 @@
       <button id="shareBtn">Share ke X</button>
     </div>
   </div>
-
+ <!-- ADS RialOverse -->
+<div class="rialoverse-ad" id="rialoverseAd">
+  <img src="/RialOshare-main/assets/rialoverse-ads.gif" alt="RialOverse" class="ad-image">
+  <div class="ad-text">
+    <h4>Explore RialOverse!</h4>
+<p>Create your unique avatar and show everyone Rialo!</p>
+    <a href="https://soullmon.github.io/RialOverse/" target="_blank">ENTER</a>
+  </div>
+</div>
  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="script.js"></script>
 </body>
