--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <h1>RialOshare</h1>
   <h3>by: <a href="www.x.com/soullmon_">@soullmon_  </a>  |   Powered by: <a href="www.x.com/RialoHQ">@RialoHQ</a></h3>
+  <p>Dekstop Mode for best experience!</p>
 
   <div class="preview" id="preview">
     <div class="bg-layer" id="bgLayer"></div>
