--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<!-- HTML Meta Tags -->
+<title>RialOshare</title>
+<meta name="description" content="">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://soullmon.github.io/RialOshare/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="RialOshare">
+<meta property="og:description" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/7444e9f4-821b-4e97-8f8c-142f641345bc.jpg?token=dqgvPmnYC3tK7f6AXakH-cdfqyOzEBxt89trIuy36FU&height=600&width=1200&expires=33295992478">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="soullmon.github.io">
+<meta property="twitter:url" content="https://soullmon.github.io/RialOshare/">
+<meta name="twitter:title" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/7444e9f4-821b-4e97-8f8c-142f641345bc.jpg?token=dqgvPmnYC3tK7f6AXakH-cdfqyOzEBxt89trIuy36FU&height=600&width=1200&expires=33295992478">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+  <!-- FAVICON -->
+  <link rel="icon" href="assets/img/favicon.png" type="image/png">
+  
   <title>RialOshare</title>
    <link rel="stylesheet" href="style.css">
 </head>
