--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<!-- HTML Meta Tags -->
-<title>RialOshare</title>
-<meta name="description" content="">
+
+  <!-- HTML Meta Tags -->
+<title>RialOshare | Rialo Thread Generator</title>
+<meta name="description" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://soullmon.github.io/RialOshare/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="RialOshare">
+<meta property="og:title" content="RialOshare | Rialo Thread Generator">
 <meta property="og:description" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/7444e9f4-821b-4e97-8f8c-142f641345bc.jpg?token=dqgvPmnYC3tK7f6AXakH-cdfqyOzEBxt89trIuy36FU&height=600&width=1200&expires=33295992478">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/e1c244bc-f876-4876-a726-718cff58e9aa.jpg?token=0K10dvY79xRY1BxUG1Tk-PVjCEqxGyBHNTQKmf8N0b0&height=600&width=1200&expires=33295994173">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="soullmon.github.io">
 <meta property="twitter:url" content="https://soullmon.github.io/RialOshare/">
-<meta name="twitter:title" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
-<meta name="twitter:description" content="">
-<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/7444e9f4-821b-4e97-8f8c-142f641345bc.jpg?token=dqgvPmnYC3tK7f6AXakH-cdfqyOzEBxt89trIuy36FU&height=600&width=1200&expires=33295992478">
+<meta name="twitter:title" content="RialOshare | Rialo Thread Generator ">
+<meta name="twitter:description" content="RialOshare is a thread/post generator tool focused on the Rialo ecosystem, built to support community education and contribution.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/e1c244bc-f876-4876-a726-718cff58e9aa.jpg?token=0K10dvY79xRY1BxUG1Tk-PVjCEqxGyBHNTQKmf8N0b0&height=600&width=1200&expires=33295994173">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   <!-- FAVICON -->
   <link rel="icon" href="assets/img/favicon.png" type="image/png">
-  
-  <title>RialOshare</title>
+
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
