--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="preview" id="preview">
     <div class="bg-layer" id="bgLayer"></div>
     <div class="text-area" id="textArea">
-      <h2 id="materi-title">How To Use RialOshare Generator</h2>
+      <h2 id="materi-title">How To Use RialOshare</h2>
       <ol id="materi-desc">
 <li> Select the material to display on the banner.</li>
 <li> Enter your nickname X for the profile.</li>
