--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="controls">
     <select id="materiSelect">
-      <option>How To Use RialOshare Generator</option>
+      <option>How To Use RialOshare</option>
       <option>What Is Rialo?</option>
       <option>RWA Rialo</option>
       <option>Rialo Isn't Layer One</option>
