--- a/index.html
+++ b/index.html
@@ -86,16 +86,19 @@
     <div class="multi-select">
       <button>Pilih Role ▼</button>
       <div class="multi-select-content" id="roleDropdown">
-        <label><input type="checkbox" value="rialone"><img src="assets/icons/rialone.png"><span>RialOne</span></label>
+        <label><input type="checkbox" value="RialONE"><img src="assets/icons/rialone.png"><span>RialONE</span></label>
+        <label><input type="checkbox" value="Builder"><img src="assets/icons/builder.png"><span>Builder</span></label>
+        <label><input type="checkbox" value="Rialo Club Member"><img src="assets/icons/rialoclub.png"><span>Rialo Club Member</span></label>
+        <label><input type="checkbox" value="Regional Helper"><img src="assets/icons/helper.png"><span>Region Helper</span></label>
+        <!--
         <label><input type="checkbox" value="rialops"><img src="assets/icons/rialops.png"><span>RialOps</span></label>
         <label><input type="checkbox" value="xplorer"><img src="assets/icons/xplorer.png"><span>Xplorer</span></label>
         <label><input type="checkbox" value="badgex"><img src="assets/icons/badgex.png"><span>BadgeX</span></label>
-        <label><input type="checkbox" value="builder"><img src="assets/icons/builder.png"><span>Builder</span></label>
-        <label><input type="checkbox" value="rialoclub"><img src="assets/icons/rialoclub.png"><span>Rial Club</span></label>
         <label><input type="checkbox" value="rialorbit"><img src="assets/icons/rialorbit.png"><span>Rial Orbit</span></label>
         <label><input type="checkbox" value="rialoyal"><img src="assets/icons/rialoyal.png"><span>RialOyal</span></label>
-        <label><input type="checkbox" value="helper"><img src="assets/icons/helper.png"><span>Region Helper</span></label>
+        <label><input type="checkbox" value="Regional Helper"><img src="assets/icons/helper.png"><span>Region Helper</span></label>
         <label><input type="checkbox" value="smartdev"><img src="assets/icons/smartdev.png"><span>Smart Contract Dev</span></label>
+      -->
       </div>
     </div>
 
