--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <option>RWA Rialo</option>
       <option>Rialo Isn't Layer One</option>
       <option>This Is Just Beginning</option>
+      <option>Rialo Solution</option>
       <option>Rialo Role System</option>
     </select>
 
