--- a/index.html
+++ b/index.html
@@ -84,15 +84,32 @@
 
     <input type="file" id="avatarUpload" accept="image/*">
 
-    <div class="multi-select">
-      <button aria-expanded="false">Select Role ▼</button>
-      <div class="multi-select-content" id="roleDropdown">
-        <label><input type="checkbox" value="RialONE"><img src="assets/icons/rialone.png"><span>RialONE</span></label>
-        <label><input type="checkbox" value="Builder"><img src="assets/icons/builder.png"><span>Builder</span></label>
-        <label><input type="checkbox" value="RialoClubMember"><img src="assets/icons/rialoclub.png"><span>Rialo Club Member</span></label>
-        <label><input type="checkbox" value="RegionalHelper"><img src="assets/icons/helper.png"><span>Region Helper</span></label>
-      </div>
-    </div>
+<div class="multi-select">
+  <button aria-expanded="false">Select Role ▼</button>
+  <div class="multi-select-content" id="roleDropdown">
+    <label>
+      <input type="checkbox" value="RialONE">
+      <img src="assets/icons/rialone.png" alt="RialONE icon">
+      <span>RialONE</span>
+    </label>
+    <label>
+      <input type="checkbox" value="Builder">
+      <img src="assets/icons/builder.png" alt="Builder icon">
+      <span>Builder</span>
+    </label>
+    <label>
+      <input type="checkbox" value="RialoClubMember">
+      <img src="assets/icons/rialoclub.png" alt="Rialo Club Member icon">
+      <span>Rialo Club Member</span>
+    </label>
+    <label>
+      <input type="checkbox" value="RegionalHelper">
+      <img src="assets/icons/helper.png" alt="Region Helper icon">
+      <span>Region Helper</span>
+    </label>
+  </div>
+</div>
+
 
     <div class="btn-group">
       <button id="generateBtn">Generate</button>
