--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
   <div class="multi-select-content" id="roleDropdown">
     <label>
       <input type="checkbox" value="RialONE">
-      <img src="assets/icons/rialone.png" alt="RialONE icon">
+      <img src="assets/icons/RialONE.png" alt="RialONE icon">
       <span>RialONE</span>
     </label>
     <label>
       <input type="checkbox" value="Builder">
-      <img src="assets/icons/builder.png" alt="Builder icon">
+      <img src="assets/icons/Builder.png" alt="Builder icon">
       <span>Builder</span>
     </label>
     <label>
       <input type="checkbox" value="RialoClubMember">
-      <img src="assets/icons/rialoclub.png" alt="Rialo Club Member icon">
+      <img src="assets/icons/RialoClubMember.png" alt="Rialo Club Member icon">
       <span>Rialo Club Member</span>
     </label>
     <label>
       <input type="checkbox" value="RegionalHelper">
-      <img src="assets/icons/helper.png" alt="Region Helper icon">
+      <img src="assets/icons/RegionalHelper.png" alt="Region Helper icon">
       <span>Region Helper</span>
     </label>
   </div>
